--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^0.13.4
+  flutter_dotenv: ^5.0.2
+  whychat:
+    git:
+      url: https://github.com/bozzaccio/whychat-server.git
+      ref: main
   flutter:
     sdk: flutter
 
@@ -54,6 +60,7 @@ flutter:
 
   assets:
     - assets/
+    - .env.chat
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
